<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/hasil"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <EditText
        android:id="@+id/edt_pertama"
        android:layout_width="163dp"
        android:layout_height="44dp"
        android:hint="@string/nilai_pertama"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edt_kedua"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231" />

    <Button
        android:id="@+id/btn_tambah"
        android:layout_width="112dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:text="@string/tambah"
        app:layout_constraintEnd_toStartOf="@+id/btn_kurang"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_pertama" />

    <Button
        android:id="@+id/btn_kali"
        android:layout_width="112dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:text="@string/kali"
        app:layout_constraintEnd_toStartOf="@+id/btn_bagi"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_tambah" />

    <Button
        android:id="@+id/btn_kurang"
        android:layout_width="112dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:text="@string/kurang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_kedua" />

    <Button
        android:id="@+id/btn_bagi"
        android:layout_width="112dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:text="@string/bagi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_kurang" />

    <EditText
        android:id="@+id/edt_kedua"
        android:layout_width="163dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/nilai_kedua"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231" />

</androidx.constraintlayout.widget.ConstraintLayout>